# x-presenter

./: .gitignore  AGENTS.md  PHASE2_COMPLETION.md  PHASE3_COMPLETION.md  PHASE3_README.md  PHASE4_COMPLETION.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE4_USAGE_GUIDE.md  PLAN.md  README.md  pyproject.toml
content/: slides.md
docs/explanation/: code_block_contrast_improvement.md  code_blocks_deliverables_checklist.md  code_blocks_implementation.md  code_blocks_implementation_plan.md  config_import_fix.md  critical_bugfix_implementation_plan.md  header_list_ordering_implementation.md  implementation.md  markdown_formatting_implementation.md  markdown_table_research_summary.md  markdown_table_support_plan.md  ordered_list_support_implementation.md  paragraph_handling_implementation.md  phase1_implementation.md  phase2_cli_argument_fixes.md  phase3_background_image_implementation.md  phase4_filename_handling_implementation.md  phase_10_layout_overlap_fix.md  phase_11_modular_refactor.md  phase_1_code_blocks_parsing_implementation.md  phase_2_syntax_highlighting_implementation.md  phase_2_table_rendering_implementation.md  phase_3_rendering_implementation.md  phase_4_markdown_table_support_implementation.md  phase_5_integration_validation_implementation.md  phase_5_validation_and_documentation_implementation.md  phase_6_speaker_notes_implementation.md  (+8 more)
testdata/: title_slide_example.md
tests/: test_background_image.py  test_cli_arguments.py  test_code_block_rendering.py  test_code_blocks.py  test_code_blocks_integration.py  test_converter.py  test_filename_handling.py  test_header_list_interleaving.py  test_markdown_formatting.py  test_markdown_headers_and_layout.py  test_multiline_lists.py  test_ordered_lists.py  test_paragraph_handling.py  test_placeholder_cleanup.py  test_speaker_notes.py  test_syntax_highlighting.py  test_table_example_integration.py  test_table_integration_end_to_end.py  test_title_slide.py
(+24 files in other folders)
